@@ -1,3 +1,4 @@
+- Changed cppcms_make_key now written in C instead of unportable bash/od
 - Fixed -- widgets are default constructable
 - Added help to templates compiler, BSD bugfix
 - Now session timeout is preserved withing session.
